--- a/app/Home.module.css
+++ b/app/Home.module.css
@@ -6,6 +6,13 @@
 .flexContainer {
     display: flex;
     align-items: center;
+    justify-content: space-between; /* Ensures maximum space between items */
+}
+
+/* Add more specific styles if needed */
+.footerDiv {
+    flex: 1; /* Each child will take equal space */
+    padding: 20px; /* Adds padding around the text */
 }
 
 .logoLink {
